# Torrenfut

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: torrenfut_ci.yml
torrenfut/: crud.py  db.sqlite3  pytest.ini
torrenfut/clientes/: admin.py  forms.py  models.py  urls.py  views.py
torrenfut/clientes/migrations/: 0001_initial.py  0002_alter_cliente_options_remove_cliente_cpf_and_more.py  0003_alter_cliente_first_name.py  0004_alter_cliente_email_alter_cliente_first_name.py  0005_cliente_user.py
torrenfut/clientes/static/: editar_perfil.css  forms.css  forms_cadastro.css  forms_login.css  perfil.css
torrenfut/clientes/templates/: editar_perfil.html  forms_cadastro.html  forms_login.html  perfil.html
torrenfut/fornecedores/: admin.py  models.py
torrenfut/fornecedores/migrations/: 0001_initial.py  0002_taxa_tipo_produto_alter_fornecedor_tipo_produto.py  0003_alter_taxa_tipo_produto.py  0004_alter_taxa_tipo_produto.py  0005_remove_taxa_tipo_produto_taxa_tipos_produto.py
torrenfut/store/: admin.py  apps.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
torrenfut/store/migrations/: 0001_initial.py  0002_rename_preco_camiseta_preco_custo_and_more.py  0003_camisetatamanho_estoque_minimo.py  0004_historicoestoque.py  0005_remove_historicoestoque_produto_and_more.py  0006_historicoestoque_produto.py  0007_alter_historicoestoque_produto.py  (+11 more)
torrenfut/torrenfut/: settings.py  urls.py  wsgi.py
torrenfut/vendas/: admin.py  apps.py  context_processors.py  models.py  signals.py  urls.py  views.py
(+27 files in other folders)
