[tool.poetry]
name = "torrenfut"
version = "0.1.0"
description = ""
authors = ["Seu Nome <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "torrenfut.settings"
python_files = ["test*.py", "*_test.py"]
